# workbench-app-devcontainers

./: .devcontainer.json  .gitignore  .gitmodules  CLAUDE.md  CODEOWNERS  LICENSE.txt  PACKAGE_INSTALLATION_GUIDE.md  README.md  WORKBENCH_DEVCONTAINERS_GUIDE.md  post-startup.sh  validation-plan.md
.devcontainer/: .devcontainer.json  devcontainer.json
.devcontainer/features/: gemini  llm-context  wb-mcp-server  workbench-tools
.github/workflows/: demo.yaml  release.yaml  test-pr.yaml  test-scripts.yaml  update-features.yaml
docs/: Create-Custom-App-With-LLM.html  Create-Custom-App-With-LLM.md  PM-One-Pager-LLM-Custom-App.html
feature-versions/: state.json  update.sh
images/test/: Dockerfile
images/workbench-jupyter/: Dockerfile  README.md  container-post-startup-hook.sh  jupyter_server_config.py
jupyter/: .devcontainer.json  docker-compose.yaml
pep-cli/: .devcontainer.json  docker-compose.yaml
rstudio/: .devcontainer.json  README.md  devcontainer-template.json  docker-compose.yaml
rstudio/agent/: .devcontainer.json
rstudio/rstudio/: .devcontainer.json  post-startup.sh
scripts/: create-custom-app.sh
scripts/test/: README.md  create-custom-app.bats
src/: docker-compose-fluentbit.yaml
src/anshicustomapp/: devcontainer-template.json
src/aou-common/: aou-common-compose.yaml  wondershaper-exempt.sh
src/aou-common/extension-builder/extension/aou-jupyterlab/: .copier-answers.yml  README.md  install.json  package.json  pyproject.toml
src/aou-common/extension-builder/extension/aou-jupyterlab/src/: index.ts
src/aou-sas/: .devcontainer.json  Dockerfile  devcontainer-template.json  docker-compose.yaml  sas-entrypoint.sh  sas-post-deploy.sh  sas-pre-deploy.sh  sas-startup.sh  secrets.yml  setup-sas-env.sh
src/bq-dashboard-simple/: .devcontainer.json  devcontainer-template.json  docker-compose.yaml
src/bq-monitoring-dashboard/: .devcontainer.json  Dockerfile  README.md  app.py  devcontainer-template.json  docker-compose.yaml  requirements.txt
src/chromium/: .devcontainer.json  docker-compose.yaml
src/cirrocumulus/: .devcontainer.json  Dockerfile  README.md  cirro-scanner.sh  devcontainer-template.json  docker-compose.yaml
src/clinical-dashboard/: .devcontainer.json  .dockerignore  .gitignore  DEPLOYMENT.md  DEPLOYMENT_FIXES.md  Dockerfile  Dockerfile.minimal  Dockerfile.simple  FEATURES.md  README.md  TROUBLESHOOTING.md  app.py  devcontainer-template.json  docker-compose.yaml  requirements.txt  start-dev.sh
src/clinical-dashboard/backend/: pyproject.toml
src/clinical-dashboard/backend/app/: __init__.py  config.py  main.py
src/clinical-dashboard/backend/app/routers/: __init__.py  clinical_data.py  cohorts.py  device_data.py
src/clinical-dashboard/backend/app/schemas/: clinical_data.py  cohort.py  device_data.py
src/clinical-dashboard/backend/app/services/: __init__.py  bq.py
src/clinical-dashboard/backend/cohort_multimodal_dashboard.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/fast-omop/fast-omop/: .env.docker  LICENSE  README.md  config.toml  pyproject.toml
src/fast-omop/fast-omop/src/agno_fastomop/: bootstrap.py  config.py  run_agent.py  web_interface.py
src/fast-omop/fast-omop/src/agno_fastomop/agents/: database.py  factory.py  semantic.py  supervisor.py
src/fast-omop/fast-omop/src/agno_fastomop/evaluation/: experiments.py
src/fast-omop/fast-omop/src/agno_fastomop/knowledge/omop_world_model/: critical_sql_patterns.md  omop_knowledge.md
src/fast-omop/fast-omop/src/agno_fastomop/knowledge/omop_world_model/.lancedb/omop_world_model.lance/_transactions/: 0-f8bd0028-2884-4e43-b7b8-1a45456873e6.txn
src/fast-omop/fast-omop/src/agno_fastomop/knowledge/omop_world_model/.lancedb/omop_world_model.lance/_versions/: 1.manifest
src/fast-omop/fast-omop/src/agno_fastomop/observability/: trace_context.py  tracer.py
src/fast-omop/fast-omop/src/agno_fastomop/prompts/: database_agent.txt  semantic_agent_fastomop.txt  supervisor.txt
src/fast-omop/fast-omop/src/agno_fastomop/schemas/: schemas.py
src/fast-omop/fast-omop/src/agno_fastomop/workflows/: omop_workflow.py
src/fast-omop/fast-omop/tests/: test_database_agent.py  test_database_agent_verbose.py  test_mcp_direct.py  test_mcp_manual_lifecycle.py  test_mcp_patients.py  test_omcp_connection.py  test_semantic_agent.py  test_workflow_handoff.py
src/stat-expl/backend/: pyproject.toml
src/stat-expl/backend/app/: __init__.py  config.py  export.py  governance.py  main.py
startupscript/: README.md  bash-completion.sh  emit.sh  git-setup.sh  gradio.sh  install-cli.sh  install-java.sh  install-workflow-tools.sh  post-startup.sh  remount-on-restart.sh  setup-bashrc.sh  setup-docker.sh
template/: .devcontainer.json  README.md  docker-compose.yaml
test/: test.sh  vm-metadata.sh
tests/: cohort-explorer.sh  custom-workbench-jupyter-template.sh  dbm-example.sh  example.sh  jupyter-template.sh  r-analysis.sh  test-app-secrets.bats  test-app-secrets.sh  ubuntu-example.sh  vscode-docker.sh  vscode.sh  workbench-jupyter-with-llm.sh
vscode/: .devcontainer.json  devcontainer-template.json  docker-compose.yaml
(+970 files in other folders)
