[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "stat-expl"
version = "1.0.0"
description = "Dataset Statistical Explorer backend"
requires-python = ">=3.9"
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
]

[tool.setuptools.packages.find]
include = ["app*"]
